# ros2_kortex

kortex_description/arms/gen3/7dof/urdf/: gen3_macro.xacro  kortex.ros2_control.xacro
kortex_description/launch/: view_robot.launch.py
kortex_driver/: CMakeLists.txt  package.xml
kortex_driver/include/kortex_driver/: hardware_interface.hpp
kortex_driver/src/: hardware_interface.cpp
kortex_driver/urdf/: Kinova_1.urdf
